--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\SEY Team\\.virtualenvs\\koe-AwpGQIZm\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\Cursus\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
